feat: dynamic import

--- a/.babelrc
+++ b/.babelrc
@@ -3,5 +3,8 @@
     // 解析 ES6
     "@babel/preset-env",
     "@babel/preset-react"
+  ],
+  "plugins": [
+    "@babel/plugin-syntax-dynamic-import"
   ]
 }
