--- a/package.json
+++ b/package.json
@@ -21,6 +21,13 @@
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.4.0",
     "cssnano": "^5.0.8",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^19.0.2",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "file-loader": "^6.2.0",
     "html-webpack-externals-plugin": "^3.8.0",
     "html-webpack-plugin": "^5.5.0",
@@ -38,6 +45,7 @@
     "webpack-dev-server": "^4.4.0"
   },
   "dependencies": {
+    "babel-eslint": "^10.1.0",
     "css-minimizer-webpack-plugin": "^3.1.1",
     "lib-flexible": "^0.3.2",
     "mini-css-extract-plugin": "^2.4.3"
