--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/preset-react": "^7.14.5",
     "autoprefixer": "^10.4.0",
     "babel-loader": "^8.2.2",
+    "babel-polyfill": "^6.26.0",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.4.0",
     "cssnano": "^5.0.8",
@@ -44,6 +45,7 @@
     "react-dom": "^17.0.2",
     "style-loader": "^3.3.0",
     "webpack": "^5.58.2",
+    "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.0",
     "webpack-dev-server": "^4.4.0",
     "webpack-merge": "^5.8.0"
