--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "style-loader": "^3.3.0",
+    "thread-loader": "^3.0.4",
     "webpack": "^5.58.2",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.0",
