--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "webpack --config webpack.prod.js",
     "dev": "webpack-dev-server --config webpack.dev.js --open",
     "build:ssr": "webpack --config webpack.ssr.js",
-    "build:stats": "npx webpack --profile --json=compilation-stats.json"
+    "build:stats": "npx webpack --profile --json=compilation-stats.json",
+    "dll": "webpack --config webpack.dll.js"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +22,7 @@
     "autoprefixer": "^10.4.0",
     "babel-loader": "^8.2.2",
     "babel-polyfill": "^6.26.0",
+    "cache-loader": "^4.1.0",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.4.0",
     "cssnano": "^5.0.8",
@@ -33,17 +35,20 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "express": "^4.17.1",
     "file-loader": "^6.2.0",
+    "hard-source-webpack-plugin": "^0.13.1",
     "html-webpack-externals-plugin": "^3.8.0",
     "html-webpack-plugin": "^5.5.0",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "postcss-loader": "^6.2.0",
+    "purgecss-webpack-plugin": "^4.1.3",
     "px2rem-loader": "^0.1.9",
     "raw-loader": "^0.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "style-loader": "^3.3.0",
+    "terser-webpack-plugin": "^5.3.0",
     "thread-loader": "^3.0.4",
     "webpack": "^5.58.2",
     "webpack-bundle-analyzer": "^4.5.0",
