--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "hard-source-webpack-plugin": "^0.13.1",
     "html-webpack-externals-plugin": "^3.8.0",
     "html-webpack-plugin": "^5.5.0",
+    "image-webpack-loader": "^8.0.1",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
